logs/probe-params.log
Listing '.'...
Listing './bin'...
Compiling './bin/probe_params.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cleo'...
Listing './lib/python3.5/site-packages/cleo/commands'...
Listing './lib/python3.5/site-packages/cleo/commands/completion'...
Listing './lib/python3.5/site-packages/cleo/descriptors'...
Listing './lib/python3.5/site-packages/cleo/exceptions'...
Listing './lib/python3.5/site-packages/cleo/formatters'...
Listing './lib/python3.5/site-packages/cleo/helpers'...
Listing './lib/python3.5/site-packages/cleo/inputs'...
Listing './lib/python3.5/site-packages/cleo/outputs'...
Listing './lib/python3.5/site-packages/cleo/questions'...
Listing './lib/python3.5/site-packages/cleo/resources'...
Listing './lib/python3.5/site-packages/cleo/resources/bin'...
Listing './lib/python3.5/site-packages/cleo/styles'...
Listing './lib/python3.5/site-packages/cleo/testers'...
Listing './lib/python3.5/site-packages/cleo/validators'...
Listing './lib/python3.5/site-packages/cleo-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/probe'...
Listing './lib/python3.5/site-packages/probe/params'...
Compiling './lib/python3.5/site-packages/probe/params/sim_params.py'...
***   File "./lib/python3.5/site-packages/probe/params/sim_params.py", line 105
    print '{k}: {v}'.format(k=k, v=v)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/probe_params-0.1.30.egg-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pylev-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
